# kraken2ref

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Dockerfile  README.md  Singularity  changelog.md  pyproject.toml  requirements.txt  setup.cfg
kraken2ref/: cmd.py  dump_fastqs.py  kraken2reference.py  main.py  poll.py  sort_reads.py  taxonlevel.py  taxonomytree.py
kraken2ref/scripts/: collect_references.py  generate_report.py  k2r_analyze.py  sort_reads.py
kraken2ref/src/: graph_functions.py  kraken_taxonomy_report.py  polling_functions.py  sort_reads_by_ref.py  taxonlevel.py
kraken2ref/tests/: integration_test.py  test_graphs.py  test_kraken_taxonomy_report.py  test_polls.py  test_taxon_levels.py
kraken2ref/tests/fixtures/: class_seqs_1.fq  class_seqs_2.fq  decomposed.json  output.kraken  report.txt  test_condensed.unwritten_reads.kraken  test_condensed_decomposed.json  test_condensed_updated_decomposed.json  test_decomposed.json  test_on_fixture_decomposed.json  test_split_graph_decomposed.json  test_w_poll_decomposed.json  unclass_seqs_1.fq  unclass_seqs_2.fq
tests/: analyse_polling.ipynb  test_dump_to_fq.py  test_outputs.py  test_polling_in_class.py  test_polls.py  test_scenarios.py  test_sort_reads.py  test_taxon_level.py  test_taxonomytree_with_nodes.py  test_taxonomytree_with_tree.py
tests/artificial_reports/: adenovirus_clean.report.txt  fluA_clean.report.txt  no_data.report.txt  scov2_clean.report.txt
tests/resources/: run_example.sh
tests/test_set/with_fluseg_db/: condensed_numreads.txt  testset_50x.unclass_seqs_1.fq  testset_50x.unclass_seqs_2.fq  testset_50x.uniq.report.txt  tree_numreads.txt
tests/test_set/with_refseq_db/: testset_50x.report.txt  testset_50x.unclass_seqs_1.fq  testset_50x.unclass_seqs_2.fq  testset_50x.uniq.report.txt
