[metadata]
name = kraken2ref
description = a tool to create read2reference mapping from kraken2 outputs
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Bruhad Dave, Frank Schwach
author_email = bd8@sanger.ac.uk, fs5@sanger.ac.uk
license = MIT

classifiers =
	Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

# project_urls = 
#     Documentation = 
#     Source =
#     Tracker = 

[options]
packages = find:

platforms = any

# reads the Manifest.in file for extra files (data) that should be copied into the
# installation dir
include_package_data = False
install_requires =
	pytest>=6.2.2
	importlib-resources>=5.1.0
	cached-property>=1.5.2
	flake8>=7.0.0
	pandas>=2.1.4
	pytest>=6.2.2
	importlib-resources>=5.1.0
	cached-property>=1.5.2
	scipy>=1.12.0
	biopython>=1.83

python_requires = >=3.10

setup_requires =
	# this package extracts the version strings from Git tag, so 
	# we don't end up hardcoding the version number anywhere in the repo and 
	# there is no duplication of verison numbers in the code and in tags
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
	# this makes pip create the executable, which delegates to this function
    kraken2r = kraken2ref.cmd:main
	get_refs = kraken2ref.scripts.collect_references:main
	generate_report = kraken2ref.scripts.generate_report:main

[options.extras_require]
test =
    pytest >= 6.2.2
all =
    %(test)s

[flake8]
extend-ignore =
	E251, E262, E266